app/src/main/java/com/example/bookclub/errors/StudyNotAppliedBefore.java
package com.example.bookclub.errors;

public class StudyNotAppliedBefore extends RuntimeException {
	public StudyNotAppliedBefore() {
		super("Study not applied before");
	}
}
